--- a/bootstrap_sandbox_starter/2_3_text_alignment_display.html
+++ b/bootstrap_sandbox_starter/2_3_text_alignment_display.html
@@ -148,11 +148,11 @@
     <br>
 
     <!-- INLINE BLOCK -->
-    <div>
+    <div class="d-inline-block bg-warning">
       <h3>Hello</h3>
       This is inline
     </div>
-    <div>
+    <div class="d-inline-block bg-warning">
       <h3>Hello</h3>
       This is inline
     </div>
