--- a/bootstrap_sandbox_starter/3_9_cards.html
+++ b/bootstrap_sandbox_starter/3_9_cards.html
@@ -140,7 +140,7 @@
 
         <!-- HEADER, FOOTER, CENTERED -->
         <div class="card text-center">
-            <di class="card-header text-center">
+            <div class="card-header text-center">
                 My Card
             </div>
             <div class="card-body text-center">
