--- a/bootstrap_sandbox_starter/5_2_carousel.html
+++ b/bootstrap_sandbox_starter/5_2_carousel.html
@@ -90,25 +90,117 @@
       <div class="col-sm-8 m-auto">
 
         <!-- SIMPLE SLIDER -->
-        <div>
-          <div>
-            <div>
-              <img src="https://source.unsplash.com/wgq4eit198Q/700x400" alt="First Slide">
+        <div class="carousel slide mb-5" data-ride="carousel" id="slider1">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/wgq4eit198Q/700x400" alt="First Slide">
             </div>
-            <div>
-              <img src="https://source.unsplash.com/WLUHO9A_xik/700x400" alt="Second Slide">
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/WLUHO9A_xik/700x400" alt="Second Slide">
             </div>
-            <div>
-              <img src="https://source.unsplash.com/4yta6mU66dE/700x400" alt="Third Slide">
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/4yta6mU66dE/700x400" alt="Third Slide">
             </div>
           </div>
         </div>
 
         <!-- SLIDER WITH CONTROLS -->
+        <div class="carousel slide mb-5" data-ride="carousel" id="slider2">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/wgq4eit198Q/700x400" alt="First Slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/WLUHO9A_xik/700x400" alt="Second Slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/4yta6mU66dE/700x400" alt="Third Slide">
+            </div>
+          </div>
 
+          <!-- CONTROLS -->
+
+          <a href="#slider2" data-slide="prev" class="carousel-control-prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+
+          <a href="#slider2" data-slide="next" class="carousel-control-next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
+        </div>
         <!-- SLIDER WITH INDICATORS -->
+        <div class="carousel slide mb-5" data-ride="carousel" id="slider3">
+          <div class="carousel-inner">
+            <ol class="carousel-indicators">
+              <li class="active" data-target="#slider3" data-slide-to="0"></li>
+              <li data-target="#slider3" data-slide-to="1"></li>
+              <li data-target="#slider3" data-slide-to="2"></li>
+            </ol>
+
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/wgq4eit198Q/700x400" alt="First Slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/WLUHO9A_xik/700x400" alt="Second Slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/4yta6mU66dE/700x400" alt="Third Slide">
+            </div>
+          </div>
+
+          <!-- CONTROLS -->
+
+          <a href="#slider3" data-slide="prev" class="carousel-control-prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+
+          <a href="#slider3" data-slide="next" class="carousel-control-next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
+        </div>
 
         <!-- SLIDER WITH CAPTIONS -->
+        <div class="carousel slide mb-5" data-ride="carousel" id="slider4">
+          <div class="carousel-inner">
+            <ol class="carousel-indicators">
+              <li class="active" data-target="#slider4" data-slide-to="0"></li>
+              <li data-target="#slider4" data-slide-to="1"></li>
+              <li data-target="#slider4" data-slide-to="2"></li>
+            </ol>
+
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/wgq4eit198Q/700x400" alt="First Slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Slide one</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, ipsum possimus, architecto magnam quibusdam, at nihil et doloremque provident deserunt impedit repudiandae velit porro quod aliquid. Commodi iste sint ut!</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/WLUHO9A_xik/700x400" alt="Second Slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Slide two</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque voluptas tenetur dolorum placeat ad laboriosam atque quod debitis iste dolor architecto, officia odit illum eum cupiditate minus, voluptates pariatur maiores?</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="https://source.unsplash.com/4yta6mU66dE/700x400" alt="Third Slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Slide three</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quaerat libero veniam tenetur quis rerum eius beatae quam. Libero non quibusdam dolorum amet sequi necessitatibus, vel illo hic voluptatem cumque.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- CONTROLS -->
+
+          <a href="#slider4" data-slide="prev" class="carousel-control-prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+
+          <a href="#slider4" data-slide="next" class="carousel-control-next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -122,7 +214,16 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
   <script>
+    $('.carousel').carousel({
+      interval: 1000,
+      keyboard: true,
+      pause: 'hover',
+      wrap: true
+    });
 
+    $('#slider4').on('slide.bs.carousel', function() {
+      console.log('ahre');
+    });
   </script>
 </body>
 
