--- a/bootstrap_sandbox_starter/5_4_tooltips.html
+++ b/bootstrap_sandbox_starter/5_4_tooltips.html
@@ -88,29 +88,29 @@
     <!--###################START HERE######################-->
 
     <!-- TOOLTIPS -->
-    <button class="btn btn-primary">Tooltip On Top</button>
-    <button class="btn btn-success">Tooltip On Right</button>
-    <button class="btn btn-warning">Tooltip On Bottom</button>
-    <button class="btn btn-danger">Tooltip On Left</button>
+    <button data-toggle="tooltip" data-placement="top" title="tooltip on top" class="btn btn-primary">Tooltip On Top</button>
+    <button data-toggle="tooltip" data-placement="right" title="tooltip on the right" class="btn btn-success">Tooltip On Right</button>
+    <button data-toggle="tooltip" data-placement="bottom" title="tooltip on the bottom" class="btn btn-warning">Tooltip On Bottom</button>
+    <button data-toggle="tooltip" data-placement="left" title="tooltip on the left" class="btn btn-danger">Tooltip On Left</button>
 
     <br>
     <br>
 
     <!-- TOOLTIPS WITH HTML -->
-    <button class="btn btn-primary">Tooltip On With HTML</button>
+    <button id="hello" data-toggle="tooltip" data-placement="top" title="<h3>no te laa creo</h3><p>no puede serrr</p>" data-html="true" class="btn btn-primary">Tooltip On With HTML</button>
 
     <hr>
 
     <!-- TRIGGER WITH JS -->
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="showTooltip()">
       Show Tooltip
     </button>
 
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="hideTooltip()">
       Hide Tooltip
     </button>
 
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="toggleTooltip()">
       Toggle Tooltip
     </button>
 
@@ -125,7 +125,35 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
   <script>
+    // Initialize tooltips
 
+    $('[data-toggle="tooltip"]').tooltip();
+
+    function showTooltip() {
+      $('#hello').tooltip('show');
+    }
+
+    function hideTooltip() {
+      $('#hello').tooltip('hide');
+    }
+
+    function toggleTooltip() {
+      $('#hello').tooltip('toggle');
+    }
+
+    //tooltips events
+    $('#hello').on('show.bs.tooltip', function() {
+      console.log("Tooltip show")
+    })
+    $('#hello').on('shown.bs.tooltip', function() {
+      console.log("Tooltip shown")
+    })
+    $('#hello').on('hide.bs.tooltip', function() {
+      console.log("Tooltip hide")
+    })
+    $('#hello').on('hidden.bs.tooltip', function() {
+      console.log("Tooltip hidden")
+    })
   </script>
 </body>
 
