--- a/portfoliogrid/index.html
+++ b/portfoliogrid/index.html
@@ -51,21 +51,21 @@
               Experienced Full Stack Web Developer
             </div>
 
-            <div class="container text-white text-center">
-              <div class="row g-0">
-                <div class="col-3 port-item py-4 bg-primary" data-toggle="collapse" data-target="#home">
+            <div>
+              <div class="d-flex flex-row text-white align-items-stretch text-center">
+                <div class="port-item p-4 bg-primary" data-toggle="collapse" data-target="#home">
                   <i class="fas fa-home fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Home</span>
                 </div>
-                <div class="col-3 port-item py-4 bg-success" data-toggle="collapse" data-target="#resume">
+                <div class="port-item p-4 bg-success" data-toggle="collapse" data-target="#resume">
                   <i class="fas fa-graduation-cap fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Resume</span>
                 </div>
-                <div class="col-3 port-item py-4 bg-secondary" data-toggle="collapse" data-target="#work">
+                <div class="port-item p-4 bg-secondary" data-toggle="collapse" data-target="#work">
                   <i class="fas fa-folder-open fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Work</span>
                 </div>
-                <div class="col-3 port-item py-4 bg-info" data-toggle="collapse" data-target="#contact">
+                <div class="port-item p-4 bg-info" data-toggle="collapse" data-target="#contact">
                   <i class="fas fa-envelope fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Contact</span>
                 </div>
