--- a/portfoliogrid/index.html
+++ b/portfoliogrid/index.html
@@ -53,19 +53,19 @@
 
             <div>
               <div class="d-flex flex-row text-white align-items-stretch text-center">
-                <div class="port-item p-4 bg-primary" data-toggle="collapse" data-target="#home">
+                <div class="port-item p-4 bg-primary" data-bs-toggle="collapse" data-bs-target="#home">
                   <i class="fas fa-home fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Home</span>
                 </div>
-                <div class="port-item p-4 bg-success" data-toggle="collapse" data-target="#resume">
+                <div class="port-item p-4 bg-success" data-bs-toggle="collapse" data-bs-target="#resume">
                   <i class="fas fa-graduation-cap fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Resume</span>
                 </div>
-                <div class="port-item p-4 bg-secondary" data-toggle="collapse" data-target="#work">
+                <div class="port-item p-4 bg-secondary" data-bs-toggle="collapse" data-bs-target="#work">
                   <i class="fas fa-folder-open fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Work</span>
                 </div>
-                <div class="port-item p-4 bg-info" data-toggle="collapse" data-target="#contact">
+                <div class="port-item p-4 bg-info" data-bs-toggle="collapse" data-bs-target="#contact">
                   <i class="fas fa-envelope fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Contact</span>
                 </div>
@@ -75,6 +75,51 @@
         </div>
       </div>
     </header>
+
+    <!-- HOME -->
+    <div id="home" class="collapse show">
+      <div class="card card-body bg-primary text-white py-5" data-bs-target="">
+        <h2>Welcome to my Page</h2>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, assumenda.</p>
+      </div>
+
+      <div class="card card-body py-5">
+        <h3>My Skills</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus repudiandae dicta doloremque, cupiditate quidem corrupti?</p>
+        <hr>
+        <h4>HTML 5</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 100%"></div>
+        </div>
+        <h4>CSS 3</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 100%"></div>
+        </div>
+        <h4>JavaScript</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 80%"></div>
+        </div>
+        <h4>Ruby on Rails</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 100%"></div>
+        </div>
+        <h4>Python</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 80%"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- FOOTER -->
+    <footer id="main-footer" class="p-5 bg-dark text-white">
+      <div class="row">
+        <div class="col-md-6">
+          <a href="#" class="btn btn-outline-light">
+            <i class="fas fa-cloud"></i> Download Resume
+          </a>
+        </div>
+      </div>
+    </footer>
   </div>
 
 
